	- Windows: all paths in test through outpathnorm for comparison

1.34 Tue May  6 11:53:54 GMTDT 2008
	- Avoid printing empty stdout in error case with CAL on Windows.

1.35 Sun Jun  8 15:08:17 BST 2008
	- Merged in 1.27
	- Support for stderr(0) in ipc mode

1.36 Tue Jun 17 09:15:31 BST 2008
	- END clause to kill remaining cleartool coprocesses, esp in Windows
	- sdterr(0) fix for CAL mode
	- Redirection to STDERR in ipc mode
	- Fix (James Anderson) to reference counting if already in ipc mode
	- Fixes to example/setview

1.37 Fri Sep  5 10:36:23 BST 2008
	- Fix to multiline return in scalar context, in ipc mode
	- Uncommented fork model quoting tests after fix in Argv.pm 1.23
	- Flaky/dubious support for interactive comments in unix in ipc mode

1.38 Fri Sep  5 23:26:44 EDT 2008
	- Represent 'cleartool' as a list instead of a scalar.
	  The idea is to allow 'cleartool' to be replaced by something
	  like qw(sudo cleartool). See ./examples/ctsudo.

1.39 Sat Sep  6 10:47:09 EDT 2008
	- Renamed 'find_cleartool' to more intuitive 'cleartool_path'.

1.40 Mon Sep  8 12:46:08 EDT 2008
	- Fixed merge skew in setview and CCreport example scripts.

1.41 Mon Oct  6 18:17:31 GMTDT 2008
	- Preliminary, tentative changes for CygWin support

1.42 Sun Dec 14 10:13:21 GMT 2008
	- exit code in the END clause and in DESTROY, from the cygwin branch
	- restored cleartool -status, new workaround for ClearCase setview bug
	- restricted the setview test to dynamic views
	- added one test case for setview -exec constructs
	- fix (Tatiana Shpichko) to bmccug example
	- reintroduced the handling of interactive comments in ipc mode

1.43 Sun Jan 11 17:25:37 GMTST 2009
	- under CYGWIN, force the default to ipc mode (in exec)
	- extracted the setview tests under a t directory (regression)
	- setview handling in unix directly via system and qx
	- removed a case of stickiness of stderr(0)
	- support for stdout(0)->qx: rturning only stderr
	- removed testing for bad quoting patterns