@@ -294,8 +294,10 @@ Revision history for Perl extension ClearCase::Argv.
 
 1.43 Sun Jan 11 17:25:37 GMTST 2009
 	- under CYGWIN, force the default to ipc mode (in exec)
-	- extracted the setview tests under a t directory (regression)
+	- extracted the setview tests under an r directory (regression)
+	- moved the stout/stderr test cases there as well
 	- setview handling in unix directly via system and qx
 	- removed a case of stickiness of stderr(0)
-	- support for stdout(0)->qx: rturning only stderr
+	- support for stdout(0)->qx: returning only stderr
 	- removed testing for bad quoting patterns
+	- under ctcmd, reset ipc apart on cygwin (CtCmd won't install there)
